--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -59,7 +59,7 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 			<div class="site_introduce">
 				<img class="site_introduce_illustration">
 				<h3>在这里，我能做什么？</h3>
-				<p>解答习题，录入习题，知道好友在学什么，优化和评价好友做的作业。<br/>还有很多功能陆续开发中...</p>
+				<p>解答习题，录入习题，知道好友在学什么，优化和评价好友做的作业。还有很多功能陆续开发中...</p>
 			</div>
 			<div class="site_introduce">
 				<img class="site_introduce_illustration">
