提交最简单的题库页面，该页面需要提供强大的搜索功能，逐步完善。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -208,6 +208,8 @@ color:#69768C;
 			 	<!-- 设置文本的高度 -->
 				<img alt="孜孜不倦" style="height:25px;" src="resources/images/home_logo.png">
 			</a>
+			<span class="drip_version">测试版</span>
+			
 			<div class="divider-vertical"></div>
 			<ul class="drip_top_nav">
 				<li><a href="/" class="current">首页</a></li>
