将客户端的dojo和editor注册在各自项目的plugin.xml中。
这样做的好处是，在开发时可以使用开发版本的代码，在发布时使用经过压缩的代码。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -245,6 +245,7 @@ color:#69768C;
 									<li>
 										<a href="#" class="drip_tab_nav_tab">我录的习题 <span class="counter" id="my_exer_count">0</span></a>
 									</li>
+									<!-- 添加一个我的作业 -->
 								</ul>
 							</div>
 							<div class="drip_activity_list" style="padding-top:20px">
