--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -6,7 +6,7 @@
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
 <link type="text/css" rel="stylesheet" href="/resources/main.css" />
 
-<link type="text/css" rel="stylesheet" href="/drip/Editor.css" />
+<link type="text/css" rel="stylesheet" href="/mathEditor/Editor.css" />
 <link type="text/css" rel="stylesheet" href="/resources/UploaderFileList.css" />
 
 <link type="text/css" rel="stylesheet" href="/resources/index.css" />
