修改data-dojo-config中的属性值 parseOnLoad true-->false

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/signup.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/signup.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
-		parseOnLoad:true,
+		parseOnLoad:false,
 		isDebug:true" 
 	src="/dojo/dojo.js"></script>
 <script type="text/javascript">
