--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/list.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/list.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
-		parseOnLoad:true,
+		parseOnLoad:false,
 		isDebug:true" 
 	src="/dojo/dojo.js"></script>
 <script type="text/javascript"
