将引用国际化文件和模板文件的路径改为相对本目录的路径

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dripx/login_form.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dripx/login_form.html
@@ -5,7 +5,7 @@
 <title>使用form方式的登录页面</title>
 <link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
-<link type="text/css" rel="stylesheet" href="/resources/main.css" />
+<link type="text/css" rel="stylesheet" href="/drip/resources/main.css" />
 
 <script type="text/javascript" 
 	data-dojo-config="
@@ -15,10 +15,10 @@
 	src="/dojo/dojo.js"></script>
 	
 <script type="text/javascript">
-require(["dojo/parser","widget/Login"]);
+require(["dojo/parser","drip/widget/Login"]);
 </script>
 </head>
 <body class="claro">
-<div data-dojo-type="widget/Login"></div>
+<div data-dojo-type="drip/widget/Login"></div>
 </body>
 </html>
