--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/signup.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/signup.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
-<link type="text/css" rel="stylesheet" href="/resources/main.css" />
+<link type="text/css" rel="stylesheet" href="/drip/resources/main.css" />
 <title>新用户注册 · 孜孜不倦</title>
 <script type="text/javascript" 
 	data-dojo-config="
