--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -7,7 +7,7 @@
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
 <title>孜孜不倦 · 高等数学</title>
-<link rel="stylesheet" type="text/css" href="resources/index.css" />
+<link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
 <!-- qq登录脚本 
 <script type="text/javascript"
 src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" 
@@ -21,7 +21,7 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 <div class="drip_header drip_header_logged_out">
 	<div class="container clearfix">
 		<a href="/" class="drip_header_logo">
-			<img alt="孜孜不倦" width="140px" height="40px" src="resources/images/home_logo.png">
+			<img alt="孜孜不倦" width="140px" height="40px" src="drip/resources/images/home_logo.png">
 		</a>
 		<span class="drip_version">测试版</span>
 		<ul class="drip_top_nav">
@@ -35,7 +35,7 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 		<div class="container">
 			<div class="drip_home_signup">
 				<a href="/login/renren">
-					<img alt="用人人帐号登录" src="resources/images/renren_login_white_234_48.png" style="border:none"></img>
+					<img alt="用人人帐号登录" src="drip/resources/images/renren_login_white_234_48.png" style="border:none"></img>
 				</a>
 				<p class="drip_note">不用注册，与<span style="color:#369;font-weight: bold;">人人</span>好友一起学习</p>
 			</div>
