修改首页中链接资源的路径

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -16,7 +16,7 @@
 		isDebug:true" 
 	src="/dojo/dojo.js"></script>
 <script type="text/javascript"
-   src="/mathjax/MathJax.js?config=MML_HTMLorMML">
+   src="/mathJax/MathJax.js?config=MML_HTMLorMML">
 </script>
 <script type="text/javascript" src="drip/renren.js"></script>
 <script type="text/javascript">
