修改习题页面的资源路径

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/list.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/list.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
-<link type="text/css" rel="stylesheet" href="/resources/main.css" />
-<link rel="stylesheet" type="text/css" href="resources/index.css" />
+<link type="text/css" rel="stylesheet" href="/drip/resources/main.css" />
+<link rel="stylesheet" type="text/css" href="/drip/resources/index.css" />
 
 <title>高数题库 · 孜孜不倦</title>
 <script type="text/javascript" 
@@ -15,14 +15,14 @@
 		isDebug:true" 
 	src="/dojo/dojo.js"></script>
 <script type="text/javascript"
-   src="/mathjax/MathJax.js?config=MML_HTMLorMML">
+   src="/mathJax/MathJax.js?config=MML_HTMLorMML">
 </script>
 <script type="text/javascript">
 require(["dojo/ready", 
          "dijit/registry",
          "dojo/parser",
          "dijit/form/Button",
-         "Exercise",
+         "drip/Exercise",
          "dojo/domReady!"],function(
         		 ready,
         		 registry){
@@ -46,7 +46,7 @@ require(["dojo/ready",
 	<div class="drip_header drip_header_logged_out">
 		<div class="container clearfix">
 			<a href="/" class="drip_header_logo">
-				<img alt="孜孜不倦" width="140px" height="40px" src="resources/images/home_logo.png">
+				<img alt="孜孜不倦" width="140px" height="40px" src="drip/resources/images/home_logo.png">
 			</a>
 			<span class="drip_version">测试版</span>
 			<ul class="drip_top_nav">
