--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
-<link type="text/css" rel="stylesheet" href="/resources/main.css" />
+<link type="text/css" rel="stylesheet" href="/drip/resources/main.css" />
 
 <link type="text/css" rel="stylesheet" href="/mathEditor/Editor.css" />
-<link type="text/css" rel="stylesheet" href="/resources/UploaderFileList.css" />
+<link type="text/css" rel="stylesheet" href="/drip/resources/UploaderFileList.css" />
 
-<link type="text/css" rel="stylesheet" href="/resources/index.css" />
+<link type="text/css" rel="stylesheet" href="/drip/resources/index.css" />
 <title>新建习题 · 孜孜不倦(高等数学篇)</title>
 <script type="text/javascript" 
 	data-dojo-config="
