--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
@@ -6,7 +6,7 @@
 <meta property="qc:admins" content="723131631212525166375" />
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
-<title>孜孜不倦 · 高等数学</title>
+<title>孜孜不倦 · 一起交流学习心得，共同优化教育资源。</title>
 <link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
 
 </head>
@@ -54,6 +54,7 @@
 				<p class="drip_heading_indent">共同优化教育资源</p>
 			</div>
 			<p class="drip_subheading">
+				已支持学习数学。
 				<!-- 在这里，大家一起出题、做题、编写讲义、分享教学视频 
 				不论年龄大小，不论身处何处，大家一起出题、做题、讨论。			
 				<br/>现已开放<strong>高等数学</strong>专区
