删除掉公共首页功能介绍区的图片

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -70,17 +70,17 @@
 	<div class="container">
 		<div class="site_introduces">
 			<div class="site_introduce">
-				<img class="site_introduce_illustration">
+				<!-- <img class="site_introduce_illustration"> -->
 				<h3>免费的开放学习平台</h3>
 				<p>无论你是谁，来自哪里，都可与全世界最优秀的人一起学习，享用高质量的教育资源，当然也离不开您在这里贡献的一点一滴。</p>
 			</div>
 			<div class="site_introduce">
-				<img class="site_introduce_illustration">
+				<!-- <img class="site_introduce_illustration"> -->
 				<h3>在这里，我能做什么</h3>
 				<p>与大家一起维护习题，解答习题，一起编写和翻译优秀的文档。关注好友学习动态，优化和评价好友做的作业。</p>
 			</div>
 			<div class="site_introduce">
-				<img class="site_introduce_illustration">
+				<!-- <img class="site_introduce_illustration"> -->
 				<h3>快速录入数学公式</h3>
 				<p>本网站提供首个纯键盘的快速数学公式编辑器，<strong>只要会读数学符号就会写数学公式</strong>。请参考<a href="#">数学编辑器帮助手册</a>。</p>
 			</div>
