修改路径链接问题

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -18,7 +18,7 @@
 		isDebug:true" 
 	src="/dojo/dojo.js"></script>
 <script type="text/javascript"
-   src="/mathjax/MathJax.js?config=MML_HTMLorMML">
+   src="/mathJax/MathJax.js?config=MML_HTMLorMML">
 </script>
 <script type="text/javascript">
 require(["dojo/ready", 
@@ -27,7 +27,7 @@ require(["dojo/ready",
          "dojo/store/JsonRest",
          "dijit/registry",
          "drip/exercises/ExerciseForm",
-         "userSession",
+         "drip/userSession",
          "dojo/parser",
          "dijit/form/Button",
          "dojo/domReady!"],function(
@@ -60,7 +60,7 @@ require(["dojo/ready",
 		<div class="drip_header drip_header_logged_in" style="position: fixed; width: 100%">
 			<div class="container clearfix">
 				<a href="/" class="drip_header_logo" style="height:25px;">
-					<img alt="孜孜不倦" style="height:25px;" src="/resources/images/home_logo.png">
+					<img alt="孜孜不倦" style="height:25px;" src="drip/resources/images/home_logo.png">
 				</a>
 				<div class="divider-vertical"></div>
 				<ul class="drip_top_nav">
