--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/signup.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/signup.html
@@ -85,7 +85,7 @@ require(["dojo/ready",
 		registry.byId("login").validator = function(value, constraints){
 			this.missingMessage = this.promptMessage = this.invalidMessage = "请输入正确的邮箱";
 			
-			var reg = "^(?:" + this._getPatternAttr(constraints) + ")"+(this.required?"":"?")+"$";
+			var reg = "^(?:" + this._computeRegexp(constraints) + ")"+(this.required?"":"?")+"$";
 			var clientIsValid = (new RegExp(reg)).test(value) &&
 			(!this.required || !this._isEmpty(value)) &&
 			(this._isEmpty(value) || this.parse(value, constraints) !== undefined);
