--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -2,15 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
-<link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
-<link type="text/css" rel="stylesheet" href="/drip/resources/main.css" />
-
-<link type="text/css" rel="stylesheet" href="/mathEditor/Editor.css" />
-<link type="text/css" rel="stylesheet" href="/drip/resources/UploaderFileList.css" />
-
-<link type="text/css" rel="stylesheet" href="/drip/resources/index.css" />
-<title>新建习题 · 孜孜不倦(高等数学篇)</title>
+<link type="text/css" rel="stylesheet" href="/drip/resources/app.css" />
+<title>新建数学习题 · 孜孜不倦</title>
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
