完善本地用户注册、登录和查询个人用户首页显示的用户信息等功能。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/followers/list.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/followers/list.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>关注我的人</title>
+<title>关注我的人· 孜孜不倦</title>
 <!-- TODO：在一个单独的css文件中import这些css文件 -->
 <link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
