--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -39,7 +39,7 @@ require(["dojo/ready",
 		var profileImg = dom.byId("profileImage");
 		var displayName = userInfo.nickName;
 		profileImg.alt = displayName;
-		profileImg.src = userInfo.largeImageUrl;
+		profileImg.src = userInfo.largeImageUrl || "/drip/resources/images/profile_180_180.gif";
 		dom.byId("userName").innerHTML = displayName;
 		dom.byId("follow_count").innerHTML = userInfo.followCount;
 		dom.byId("fan_count").innerHTML = userInfo.fanCount;
@@ -48,15 +48,15 @@ require(["dojo/ready",
 		dom.byId("my_exer_count").innerHTML = userInfo.exerciseCount;
 		// 在顶部用户信息区域显示
 		var topProfileImage = dom.byId("topProfileImage");
-		topProfileImage.src = userInfo.smallImageUrl;
+		topProfileImage.src = userInfo.smallImageUrl || "/drip/resources/images/profile_50_50.gif";;
 		topProfileImage.alt = displayName;
 		dom.byId("topUserName").innerHTML = displayName;
 		
 		
 		// 在关注和粉丝的链接上加上登录者的用户标识
 		// 切记：出现在rest链接中的，只能是本地用户标识，而不是第三方网站或映射用户标识
-		dom.byId("following_link").href = "/following/" + userInfo.id;
-		dom.byId("follower_link").href = "/follower/" + userInfo.id;
+		dom.byId("following_link").href = "/following/" + userInfo.digitalId;
+		dom.byId("follower_link").href = "/followers/" + userInfo.digitalId;
 	});
 	
 	on(dom.byId("logout"),"click",userSession.logout);
