--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -22,7 +22,7 @@ require(["dojo/ready",
          "dojo/parser",
          "dojo/request/xhr",
          "dijit/registry",
-         "drip/userSession",
+         "drip/user",
          "drip/Activity",
          "dojo/domReady!"],function(
         		 ready,
@@ -31,9 +31,9 @@ require(["dojo/ready",
         		 parser,
         		 xhr,
         		 registry,
-        		 userSession){
+        		 user){
 	// 加载左侧栏目中的数据，因为左侧没有用dijit部件，所无需放在ready方法中
-	userSession.getLoggedUserInfo().then(function(userInfo){
+	user.getLoggedUserInfo().then(function(userInfo){
 		console.log("登录用户信息:", userInfo);
 		// 在右侧用户信息区域显示
 		var profileImg = dom.byId("profileImage");
@@ -59,7 +59,7 @@ require(["dojo/ready",
 		dom.byId("follower_link").href = "/followers/" + userInfo.digitalId;
 	});
 	
-	on(dom.byId("logout"),"click",userSession.logout);
+	on(dom.byId("logout"),"click",user.logout);
 	
 	parser.parse();
 	
